--- a/big-job/index.html
+++ b/big-job/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Plateforme_ - Portes Ouvertes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/big-job/style/style.css">
 </head>
 <body>
     <!-- Carousel -->
     <div id="carouselHeader" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/slide1.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="assets/images ETUDIANTS.jpeg" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/slide2.jpg" class="d-block w-100" alt="Slide 2">
+                <img src="assets/img/etudiant-comptant-deux_1368-9028.avif" class="d-block w-100" alt="Slide 2">
             </div>
         </div>
     </div>
 
-    <!-- Contenu principal -->
-    <div class="container mt-5 text-center">
+    <!-- Contenu principal avec animation -->
+    <div class="container mt-5 text-center presentation-container animate__animated animate__fadeInUp">
         <h1>Bienvenue aux Portes Ouvertes de La Plateforme_</h1>
-        <p>Connectez-vous ou inscrivez-vous pour réserver votre présence !</p>
+        <p class="lead">Découvrez nos formations et réservez votre place pour les portes ouvertes du 25 au 27 mars 2025 !</p>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Connexion</button>
         <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#signupModal">Inscription</button>
+        <button class="btn btn-dark mt-2" data-bs-toggle="modal" data-bs-target="#adminLoginModal">Connexion Admin</button>
 
         <!-- Liste des événements -->
         <div class="mt-5">
@@ -40,7 +41,7 @@
             <div class="modal-content glass-effect">
                 <div class="modal-header">
                     <h5 class="modal-title">Connexion</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer la fenêtre"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer"></button>
                 </div>
                 <div class="modal-body">
                     <form id="loginForm">
@@ -65,7 +66,7 @@
             <div class="modal-content glass-effect">
                 <div class="modal-header">
                     <h5 class="modal-title">Inscription</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer la fenêtre"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer"></button>
                 </div>
                 <div class="modal-body">
                     <form id="signupForm">
@@ -84,8 +85,34 @@
         </div>
     </div>
 
+    <!-- Modal Connexion Admin -->
+    <div class="modal fade" id="adminLoginModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content glass-effect">
+                <div class="modal-header">
+                    <h5 class="modal-title">Connexion Admin</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="adminLoginForm">
+                        <div class="mb-3">
+                            <label for="adminEmail" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="adminEmail" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="adminPassword" class="form-label">Mot de passe</label>
+                            <input type="password" class="form-control" id="adminPassword" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Se connecter</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
