--- a/big-job/student-dashboard.html
+++ b/big-job/student-dashboard.html
@@ -5,26 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau de bord - La Plateforme_</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/big-job/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Bienvenue, Étudiant !</h1>
-        <p>Confirmez votre présence aux portes ouvertes.</p>
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#calendarModal">Choisir ma date</button>
+    <!-- Carousel -->
+    <div id="carouselHeader" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images ETUDIANTS.jpeg" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/img/etudiant-comptant-deux_1368-9028.avif" class="d-block w-100" alt="Slide 2">
+            </div>
+        </div>
     </div>
 
-    <!-- Modal Calendrier -->
+    <div class="container mt-5">
+        <h1>Bienvenue, Étudiant !</h1>
+        <p id="presenceStatus">Statut de votre présence : <span class="text-warning">En attente de validation</span></p>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#calendarModal" id="chooseDateButton">
+            Choisir une date
+        </button>
+    </div>
+
+    <div class="container mt-3 text-end">
+        <button id="logoutButton" class="btn btn-danger">Se déconnecter</button>
+        <a href="index.html" class="btn btn-secondary">Retour à l'accueil</a>
+    </div>
+
+    <!-- Modal pour choisir une date -->
     <div class="modal fade" id="calendarModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content glass-effect">
                 <div class="modal-header">
                     <h5 class="modal-title">Choisir une date</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer la fenêtre"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" title="Fermer"></button>
                 </div>
                 <div class="modal-body">
-                    <label for="eventSelect" class="form-label">Sélectionnez une date :</label>
-                    <select class="form-select" id="eventSelect"></select>
+                    <label for="eventDate" class="form-label">Sélectionnez une date :</label>
+                    <input type="date" class="form-control" id="eventDate" min="2025-03-25" max="2025-03-27" required>
                     <button id="confirmDate" class="btn btn-success mt-3">Confirmer</button>
                 </div>
             </div>
@@ -33,6 +52,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/big-job/js/script.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="/big-job/js/dashboard.js"></script>
 </body>
 </html>
